feat:create components series and animes and movies  component version witout search component

--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -3,11 +3,13 @@
         <h1>Demo App</h1>
     </div>
 
-    <app-form-login
-    (emitForm)="onEmitFor($event)"></app-form-login>
+    <csv-form-login
+    (emitForm)="onEmitFor($event)">
+    </csv-form-login>
 </div>
 
-<app-loader 
-[openLoader]="openLoader"></app-loader>
+<csv-loader 
+[openLoader]="openLoader">
+</csv-loader>
 
 
