--- a/src/app/home/components/movies/movies.component.scss
+++ b/src/app/home/components/movies/movies.component.scss
@@ -1,44 +1,48 @@
-.container-movies {
-    display: grid;
-    column-gap: 10px;
-    grid-auto-rows: 300px;
-    row-gap: 120px;
-    margin: 30px 16px 0px 16px;
-}
+// .container-movies {
+//     display: grid;
+//     column-gap: 10px;
+//     grid-auto-rows: 300px;
+//     row-gap: 120px;
+//     margin: 30px 16px 0px 16px;
+// }
 
-.card-img-top {
-    width: 100%;
-    height: 200px;
-}
+// .card-img-top {
+//     width: 100%;
+//     height: 200px;
+// }
 
-@media(max-width:767.98px){
-    .card {
-        width: 290px;
-        margin: 0 auto;
-    }
-    .card-img-top {
-        height: 150px;
-    }
+// p {
+//     margin-bottom: 8px;
+// }
 
-    .container-movies{
-        row-gap:20px;
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-@media(min-width:768px){
-    .card {
-        width: 320px;
-        margin: 0 auto;
-    }
-    .container-movies{
-        grid-template-columns: repeat(2, 1fr);
-        &__movie{
-            height: max-content;
-        }
-    }
-}
-@media(min-width:1200px){
-    .container-movies{
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
+// @media(max-width:767.98px){
+//     .card {
+//         width: 290px;
+//         margin: 0 auto;
+//     }
+//     .card-img-top {
+//         height: 150px;
+//     }
+
+//     .container-movies{
+//         row-gap:80px;
+//         grid-template-columns: repeat(1, 1fr);
+//     }
+// }
+// @media(min-width:768px){
+//     .card {
+//         width: 320px;
+//         margin: 0 auto;
+//     }
+//     .container-movies{
+//         grid-template-columns: repeat(2, 1fr);
+//         &__movie{
+//             height: max-content;
+//         }
+//     }
+// }
+// @media(min-width:1200px){
+//     .container-movies{
+//         grid-template-columns: repeat(3, 1fr);
+//     }
+// }
