feat: add movies,series and animes functional with search input

--- a/src/app/home/components/animes/animes.component.html
+++ b/src/app/home/components/animes/animes.component.html
@@ -1,2 +1,7 @@
+<csv-search-content
+(clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
+(keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
+(keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
+</csv-search-content>
 <csv-card-list [list]="listAnimes">
 </csv-card-list>
