--- a/src/app/home/components/movies/movies.component.html
+++ b/src/app/home/components/movies/movies.component.html
@@ -1,2 +1,7 @@
+<csv-search-content
+(clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
+(keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
+(keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
+</csv-search-content>
 <csv-card-list [list]="listMovies">
 </csv-card-list>
