--- a/src/app/login/components/form-login/form-login.component.html
+++ b/src/app/login/components/form-login/form-login.component.html
@@ -2,7 +2,8 @@
     <form [formGroup]="form">
         <div class="form-group">
             <div class="container-form__icon">
-                <i class="fa-solid fa-user-secret icon-user-login"></i>
+                <i class="fa-solid fa-laptop-code icon-user-login">
+                </i>
             </div>
         </div>
     
