--- a/src/app/shared/components/card-list/card-list.component.scss
+++ b/src/app/shared/components/card-list/card-list.component.scss
@@ -4,6 +4,14 @@
     grid-auto-rows: 400px;
     row-gap: 50px;
     margin: 30px 16px 20px 16px;
+    &__detail{
+        height: max-content;
+    }
+}
+
+.card {
+    width: 320px;
+    margin: 0 auto;
 }
 
 .card-img-top {
@@ -27,26 +35,32 @@ p {
     .container-cards{
         grid-auto-rows: 350px;
         row-gap:20px;
+        margin-top: 20px;
         grid-template-columns: repeat(1, 1fr);
-        &__detail{
-            height: max-content;
-        }
+        // &__detail{
+        //     height: max-content;
+        // }
     }
 }
-@media(min-width:768px){
-    .card {
-        width: 320px;
-        margin: 0 auto;
-    }
+@media(min-width:768px) and (max-width:1199.98px){
+    // .card {
+    //     width: 320px;
+    //     margin: 0 auto;
+    // }
     .container-cards{
+        margin-top: 20px;
         grid-template-columns: repeat(2, 1fr);
-        &__detail{
-            height: max-content;
-        }
+        // &__detail{
+        //     height: max-content;
+        // }
     }
 }
 @media(min-width:1200px){
+  
     .container-cards{
         grid-template-columns: repeat(3, 1fr);
+        // &__detail{
+        //     height: max-content;
+        // }
     }
 }
