--- a/src/app/home/components/header-dashboard/header-dashboard.component.scss
+++ b/src/app/home/components/header-dashboard/header-dashboard.component.scss
@@ -1,9 +1,9 @@
 header{
-    height: 60px;
+    height: 70px;
 }
 .container-nav {
     position: fixed;
-    height: 60px;
+    height: 70px;
     z-index: 100;
     top: 0;
     padding: 20px;
@@ -61,6 +61,7 @@ ul {
         display: flex;
         flex-direction: column;
         align-items: end;
+        margin-top: 10px;
         li {
             a {
                 padding: 4px;
