--- a/src/app/login/components/login/login.component.scss
+++ b/src/app/login/components/login/login.component.scss
@@ -2,7 +2,7 @@
     height: 100vh;
     display: grid;
     place-content: center;
-    background-image: url('../../../../assets/img/fondo-login4.jpg');
+    background-image: url('../../../../assets/img/fondo-login.jpg');
     background-size: cover;
     &__title{
         text-align: center;
