--- a/src/app/shared/components/card-list/card-list.component.html
+++ b/src/app/shared/components/card-list/card-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-cards">
+<div class="container-cards" *ngIf="!showSkeleton">
     <div class="container-cards__detail" *ngFor="let content of list">
         <div class="card">
             <img class="card-img-top" [src]="content?.imageurl" alt="Card image cap">
@@ -12,4 +12,9 @@
           </div>
     </div>
 </div>
+
+<csv-skeleton-card-list *ngIf="showSkeleton"
+    [list]="list">
+</csv-skeleton-card-list>
+
 <csv-button-scroll-top></csv-button-scroll-top>
