--- a/src/app/home/components/movies/movies.component.html
+++ b/src/app/home/components/movies/movies.component.html
@@ -1,16 +1,8 @@
-<div [ngStyle]="{display:(viewState$ |async)?.state ==='loaded'? 'block':'none' }">
-    <csv-search-content
+<csv-search-content
         (clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
         (keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
         (keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
-    </csv-search-content>
-    <csv-card-list [list]="listMovies">
-    </csv-card-list>
- </div>
+</csv-search-content>
 
- <div [ngStyle]="{display:(viewState$ |async)?.state ==='loading'? 'block':'none' }">
-    <csv-skeleton-card-list
-    [list]="listMovies">
-    </csv-skeleton-card-list>
- </div>
-
+<csv-card-list [list]="listMovies" [showSkeleton]="showSkeleton">
+</csv-card-list>
