refactor: refactor series component with payload skeleton

--- a/src/app/home/components/series/series.component.html
+++ b/src/app/home/components/series/series.component.html
@@ -1,16 +1,8 @@
-<div [ngStyle]="{display:(viewState$ |async)?.state ==='loaded'? 'block':'none' }">
-    <csv-search-content
-        (clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
-        (keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
-        (keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
-    </csv-search-content>
-    <csv-card-list [list]="listSeries">
-    </csv-card-list>
- </div>
-
- <div [ngStyle]="{display:(viewState$ |async)?.state ==='loading'? 'block':'none' }">
-    <csv-skeleton-card-list
-    [list]="listSeries">
-    </csv-skeleton-card-list>
- </div>
-
+<csv-search-content
+    (clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
+    (keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
+    (keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
+</csv-search-content>
+<csv-card-list [list]="listSeries" 
+[showSkeleton]="showSkeleton">
+</csv-card-list>
