--- a/src/app/home/components/animes/animes.component.html
+++ b/src/app/home/components/animes/animes.component.html
@@ -1,16 +1,7 @@
-<div [ngStyle]="{display:(viewState$ |async)?.state ==='loaded'? 'block':'none' }">
-    <csv-search-content
-        (clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
-        (keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
-        (keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
-    </csv-search-content>
-    <csv-card-list [list]="listAnimes">
-    </csv-card-list>
- </div>
-
- <div [ngStyle]="{display:(viewState$ |async)?.state ==='loading'? 'block':'none' }">
-    <csv-skeleton-card-list
-    [list]="listAnimes">
-    </csv-skeleton-card-list>
- </div>
-
+<csv-search-content
+   (clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
+   (keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
+   (keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
+</csv-search-content>
+ <csv-card-list [list]="listAnimes" [showSkeleton]="showSkeleton">
+</csv-card-list>
