--- a/src/app/home/components/animes/animes.component.html
+++ b/src/app/home/components/animes/animes.component.html
@@ -1,7 +1,8 @@
 <csv-search-content
    (clickedDeleteItemEVent)="onClickedDeleteItemEVent()"
    (keyBackSpaceorDeleteEvent)="onKeyBackSpaceorDeleteEvent($event)"
-   (keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)">
+   (keyPressItemsTofindEVent)="onkeyPressItemsTofindEVent($event)"
+   [showSkeleton]="showSkeleton">
 </csv-search-content>
  <csv-card-list [list]="listAnimes" [showSkeleton]="showSkeleton">
 </csv-card-list>
