refactor: refactor values to px in primeng library

--- a/src/app/shared/components/skeletons/skeleton-card-list/skeleton-card-list.component.html
+++ b/src/app/shared/components/skeletons/skeleton-card-list/skeleton-card-list.component.html
@@ -2,42 +2,34 @@
     <div class="container-cards__detail" *ngFor="let content of list">
         <div class="card-skeleton">
             <div class="card-skeleton__image">
-                <!-- width="318.55px" height="200px" -->
                 <span class="desktop-tablet">
-                    <p-skeleton class="br" width="19.9094rem" height="12.5rem"></p-skeleton>
+                    <p-skeleton class="br" width="318.55px" height="200px"></p-skeleton>
                 </span>
-                    <!-- width="288px" height="150px" -->
                 <span class="phone">
-                    <p-skeleton class="br" width="18.025rem" height="9.375rem"></p-skeleton>
+                    <p-skeleton class="br" width="288px" height="150px"></p-skeleton>
                 </span>
             </div>
             <div class="card-skeleton__body">
                 <div class="card-skeleton__name">
-                    <!-- width="184.55px" height="24px" -->
-                    <p-skeleton width="11.5344rem" height="1.5rem"></p-skeleton>
+                    <p-skeleton width="184.55px" height="24px"></p-skeleton>
                 </div>
                 <div class="card-skeleton__gender">
-                    <!-- width="184.55px" height="24px" -->
-                    <p-skeleton width="11.5344rem" height="1.5rem"></p-skeleton>
+                    <p-skeleton width="184.55px" height="24px"></p-skeleton>
                 </div>
                 <div class="card-skeleton__year">
-                    <!-- width="104.55px" height="24px" -->
-                    <p-skeleton width="6.5344rem" height="1.5rem"></p-skeleton>
+                    <p-skeleton width="104.55px" height="24px"></p-skeleton>
                 </div>
                 <div class="card-skeleton__description">
                     <span class="phone">
-                        <!-- width="232.55px" height="24px" -->
-                        <p-skeleton width="14.53444rem" height="1.5rem"></p-skeleton>
+                        <p-skeleton width="232.55px" height="24px"></p-skeleton>
                     </span>
                     <span class="desktop-tablet">
-                        <!-- width="264.5504px" height="24px" -->
-                        <p-skeleton width="16.5344rem" height="1.5rem"></p-skeleton>
+                        <p-skeleton width="264.5504px" height="24px"></p-skeleton>
                     </span>
                     
                 </div>
                 <div class="card-skeleton__button">
-                     <!-- width="101.45px" height="37.44px" -->
-                    <p-skeleton width="6.3412rem" height="2.3406rem"></p-skeleton>
+                    <p-skeleton width="101.45px" height="37.44px"></p-skeleton>
                 </div>
             </div>
         </div>
