--- a/src/app/shared/components/skeletons/skeleton-search-content/skeleton-search-content.component.html
+++ b/src/app/shared/components/skeletons/skeleton-search-content/skeleton-search-content.component.html
@@ -2,18 +2,15 @@
     <div class="form">  
         <div class="input">
             <span class="phone">
-                <!-- width="230px" height="50px" -->
-                <p-skeleton class="br" width="14.375rem" height="3.125rem">
+                <p-skeleton class="br" width="230px" height="50px">
                 </p-skeleton>
             </span>
             <span class="tablet">
-                <!-- width="400px" height="50px" -->
-                <p-skeleton class="br" width="25rem" height="3.125rem">
+                <p-skeleton class="br" width="400px" height="50px">
                 </p-skeleton>
             </span>
             <span class="desktop">
-                <!-- width="300px" height="50px" -->
-                <p-skeleton class="br" width="18.75rem" height="3.125rem">
+                <p-skeleton class="br" width="300px" height="50px">
                 </p-skeleton>
             </span>
         </div>
