feat: add carousel skeleton

--- a/src/app/shared/components/skeletons/skeleton-carousel/skeleton-carousel.component.html
+++ b/src/app/shared/components/skeletons/skeleton-carousel/skeleton-carousel.component.html
@@ -1,1 +1,10 @@
-<p>skeleton-carousel works!</p>
+<div class="container-carousel">
+    <span class="phone">
+        <p-skeleton class="br" width="100vw" height="300px">
+        </p-skeleton>
+    </span>
+    <span class="desktop-tablet">
+        <p-skeleton class="br" width="100vw" height="520px">
+        </p-skeleton>
+    </span>
+</div>
