--- a/src/app/shared/components/carousel/carousel.component.html
+++ b/src/app/shared/components/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleCaptions" class="carousel slide container-carousel">
+<div id="carouselExampleCaptions" class="carousel slide container-carousel" *ngIf="!showSkeleton">
     <!-- Botones inferiores de Slider -->
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions"  aria-current="true"
@@ -27,3 +27,6 @@
         <span class="visually-hidden">Next</span>
       </button>
 </div>
+
+<csv-skeleton-carousel *ngIf="showSkeleton">
+</csv-skeleton-carousel>
