--- a/src/app/shared/components/card-list/card-list.component.html
+++ b/src/app/shared/components/card-list/card-list.component.html
@@ -7,7 +7,7 @@
               <p class="card-text"><span><b>Género:</b></span>{{content?.gender}}</p>
               <p class="card-text"><span><b>Año:</b></span> {{content?.releaseYear}}</p>
               <p class="card-text"><span><b>Descripción:</b></span> {{content?.description}}</p>
-              <a href="#" class="btn btn-primary">Ir a Detalle</a>
+              <a class="btn btn-primary">Ir a Detalle</a>
             </div>
           </div>
     </div>
